--- a/index.html
+++ b/index.html
@@ -288,13 +288,20 @@ body::-webkit-scrollbar {
          </a><div  style="text-align:center;">
              <a href="christellehddd.com"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
 
-    <!--    <figure>  
+  <figure>  
                 <a href="https://sites.google.com/view/danys-shop"> <img onclick="magnify($(this).attr('src'))" src="images/danysshop-website.png" alt="Danys Shop by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="https://sites.google.com/view/danys-shop"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
-            -->
+
+              <figure>  
+                <a href="https://sites.google.com/view/petmedddd/home"> <img onclick="magnify($(this).attr('src'))" src="images/petmed.png" alt="Petmed by Christelle Haddad"></a>
+                <div  style="text-align:center;">
+                    <a href="https://sites.google.com/view/danys-shop"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+                </div>
+            </figure>
+
             <figure>  
          <a href="https://taigalarnaca.com/"> 
              <img onclick="magnify($(this).attr('src'))" src="images/taiga-website.png" alt="Taiga Larnaca Project for Odindigital"></a>
@@ -303,14 +310,14 @@ body::-webkit-scrollbar {
          </div>
             </figure>
             
-   <!--  <figure>  
+ <!--   <figure>  
          <a href="#"> 
              <img onclick="magnify($(this).attr('src'))" src="images/steakf.png" alt="The Steakhouse Webflow Project by Christelle Haddad"></a>
          <div  style="text-align:center;"><a href="#"> 
              <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
          </div>
-            </figure>
--->
+            </figure>-->
+
     <figure>  
          <a href="https://junkyshopper.com/"> 
              <img onclick="magnify($(this).attr('src'))"src="images/junkyshopper-website.png" alt="Junky shopper Website for Odindigital"></a>
@@ -367,7 +374,7 @@ body::-webkit-scrollbar {
                 </div>
             </figure>
          
-<!--     <figure> 
+ <!--  <figure> 
          <a href="https://pepesrestaurant.webflow.io/">
              <img onclick="magnify($(this).attr('src'))" src="images/pepesf.png" alt="Pepe's Restaurant Webflow Project by Christelle Haddad"></a>
          <div  style="text-align:center;">
