--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ body::-webkit-scrollbar {
        
             
     <figure> 
-         <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/abha-site.png" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
+         <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/abha-website.jpg" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
          </a><div  style="text-align:center;">
              <a href="christellehddd.com"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
 
