--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ body::-webkit-scrollbar {
        
             
     <figure> 
-         <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/abha-website.jpg" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
+         <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/abha-website.jpeg" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
          </a><div  style="text-align:center;">
              <a href="christellehddd.com"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
 
@@ -296,7 +296,7 @@ body::-webkit-scrollbar {
             </figure>
 
               <figure>  
-                <a href="https://sites.google.com/view/petmedddd/home"> <img onclick="magnify($(this).attr('src'))" src="images/petmed.png" alt="Petmed by Christelle Haddad"></a>
+                <a href="https://sites.google.com/view/petmedddd/home"> <img onclick="magnify($(this).attr('src'))" src="images/petmed-website.jpeg" alt="Petmed by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="https://sites.google.com/view/danys-shop"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
