--- a/index.html
+++ b/index.html
@@ -295,6 +295,13 @@ body::-webkit-scrollbar {
                 </div>
             </figure>
 
+             <figure>  
+                <a href="https://webcodelb.com"> <img onclick="magnify($(this).attr('src'))" src="images/webcodelb-website.jpeg" alt="Danys Shop by Christelle Haddad"></a>
+                <div  style="text-align:center;">
+                    <a href="https://webcodelb.com"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+                </div>
+            </figure>
+
               <figure>  
                 <a href="https://sites.google.com/view/petmedddd/home"> <img onclick="magnify($(this).attr('src'))" src="images/petmed-website.jpeg" alt="Petmed by Christelle Haddad"></a>
                 <div  style="text-align:center;">
