--- a/index.html
+++ b/index.html
@@ -296,9 +296,9 @@ body::-webkit-scrollbar {
             </figure>
 
              <figure>  
-                <a href="https://webcodelb.com"> <img onclick="magnify($(this).attr('src'))" src="images/webcodelb.png" alt="Danys Shop by Christelle Haddad"></a>
+                <a href="https://similb"> <img onclick="magnify($(this).attr('src'))" src="images/similb-website.png" alt="Simi Fashion Store by Christelle Haddad"></a>
                 <div  style="text-align:center;">
-                    <a href="https://webcodelb.com"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+                    <a href="https://similb.com"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
 
