--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ body::-webkit-scrollbar {
             </figure>
 
              <figure>  
-                <a href="https://similb"> <img onclick="magnify($(this).attr('src'))" src="images/similb-website.png" alt="Simi Fashion Store by Christelle Haddad"></a>
+                <a href="https://similb.com"> <img onclick="magnify($(this).attr('src'))" src="images/similb-website.png" alt="Simi Fashion Store by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="https://similb.com"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
@@ -305,7 +305,7 @@ body::-webkit-scrollbar {
               <figure>  
                 <a href="https://sites.google.com/view/petmedddd/home"> <img onclick="magnify($(this).attr('src'))" src="images/petmed.png" alt="Petmed by Christelle Haddad"></a>
                 <div  style="text-align:center;">
-                    <a href="https://sites.google.com/view/danys-shop"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+                    <a href="hhttps://sites.google.com/view/petmedddd/home"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
                 </div>
             </figure>
 
