--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@ Let's get started on the project! I will ensure you are consistently updated thr
 <div id="footer">
      <a href="https://g.page/r/CWhZNV453lfOEBE/review" style="color:#171717!important;">Write me a review on Google<br><img src="images/review.png" alt="write me a review on google" width="20%"/><br></a>
 
-    ©2024 <a href="https://christellehddd.com/" style="color:#171717!important;">christellehddd.com</a>
+    ©2024 <a href="https://christellehddd.com/" style="color:#171717!important;">by Christelle Haddad</a>
 </div>
 
 </body>
