--- a/index.html
+++ b/index.html
@@ -289,13 +289,15 @@ body::-webkit-scrollbar {
     <figure> 
          <a href="#"><img onclick="magnify($(this).attr('src'))" src="images/abhawebsite.png" alt="Abhagala website developed for Odindigital by Christelle Haddad" >
          </a><div  style="text-align:center;">
-             <a href="christellehddd.com"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a></div></figure>
+             <a href="christellehddd.com"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
+          <h3>Abha Gala KSA</h3>
+         </div></figure>
 
   <figure>  
                 <a href="https://sites.google.com/view/danys-shop"> <img onclick="magnify($(this).attr('src'))" src="images/danysshop-website.png" alt="Danys Shop by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="https://sites.google.com/view/danys-shop"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
-               <h3>Abha Gala KSA</h3>
+               <h3>Dany's Shop</h3>
                 </div>
             </figure>
 
@@ -311,7 +313,7 @@ body::-webkit-scrollbar {
                 <a href="https://sites.google.com/view/petmedddd/home"> <img onclick="magnify($(this).attr('src'))" src="images/petmed.png" alt="Petmed by Christelle Haddad"></a>
                 <div  style="text-align:center;">
                     <a href="hhttps://sites.google.com/view/petmedddd/home"> <button class="pulse-grow-on-hover" style="color: #18161b;" > VIEW WEBSITE ➜</button></a>
-               <h3>PetMed Veterinary</h3>
+               <h3>PetMed Clinic</h3>
                 </div>
             </figure>
 
