--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ body::-webkit-scrollbar {
 
 <!-- HTML Meta Tags -->
 <title>Freelance Web Developer in Lebanon - Christelle Haddad</title>
-<meta name="description" content="I am a freelance web developer offering high-quality web development and SEO services. My expertise ensures that your business can thrive and achieve online success.">
+<meta name="description" content="I am a freelance web developer offering high-quality web development and SEO services. My expertise ensures that your business can achieve online success.">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" />
     <meta name="author" content="Freelance web developer Christelle Haddad" />
 <meta name="keywords" content="freelance web developer, web developer lebanon, best web design companies in lebanon, freelance web developer in lebanon, webflow developer, seo services in lebanon, freelance web developer, joomla developer, shopify developer, wordpress developer, freelance web developer lebanon, web designer lebanon, christelle haddad, web developer in lebanon, wordpress developer in lebanon, christelle haddad developer, web designer in lebanon">
@@ -188,7 +188,7 @@ body::-webkit-scrollbar {
 <meta property="og:url" content="https://christellehddd.com/">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Freelance Web Developer in Lebanon - Christelle Haddad">
-<meta property="og:description" content="I am a freelance web developer offering high-quality web development and SEO services. My expertise ensures that your business can thrive and achieve online success. ">
+<meta property="og:description" content="I am a freelance web developer offering high-quality web development and SEO services. My expertise ensures that your business can achieve online success. ">
     <meta property="og:image" content="/meta-freelance-web-developer-lebanon.png">
 
 <!-- Twitter Meta Tags -->
@@ -196,7 +196,7 @@ body::-webkit-scrollbar {
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
 <meta name="twitter:title" content="Freelance Web Developer in Lebanon - Christelle Haddad">
-<meta name="twitter:description" content="I am a freelance web developer offering high-quality web development and SEO services. My expertise ensures that your business can thrive and achieve online success.  "> 
+<meta name="twitter:description" content="I am a freelance web developer offering high-quality web development and SEO services. My expertise ensures that your business can achieve online success.  "> 
 <meta name="twitter:image" content="/images/meta-freelance-web-developer-lebanon.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
