--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ body::-webkit-scrollbar {
 </style>
 
 <!-- HTML Meta Tags -->
-<title>Freelance Web Developer in Lebanon - Christelle Haddad</title>
+<title>Freelance Web Developer in Lebanon | Christelle Haddad</title>
 <meta name="description" content="I am a freelance web developer offering high-quality web development and SEO services. My expertise ensures that your business can achieve online success.">
 <link rel="author" href="https://www.linkedin.com/in/christellehaddad/" />
     <meta name="author" content="Freelance web developer Christelle Haddad" />
@@ -187,7 +187,7 @@ body::-webkit-scrollbar {
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://christellehddd.com/">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Freelance Web Developer in Lebanon - Christelle Haddad">
+<meta property="og:title" content="Freelance Web Developer in Lebanon | Christelle Haddad">
 <meta property="og:description" content="I am a freelance web developer offering high-quality web development and SEO services. My expertise ensures that your business can achieve online success. ">
     <meta property="og:image" content="/meta-freelance-web-developer-lebanon.png">
 
@@ -195,7 +195,7 @@ body::-webkit-scrollbar {
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="christellehddd.com">
 <meta property="twitter:url" content="htts://christellehddd.com/">
-<meta name="twitter:title" content="Freelance Web Developer in Lebanon - Christelle Haddad">
+<meta name="twitter:title" content="Freelance Web Developer in Lebanon | Christelle Haddad">
 <meta name="twitter:description" content="I am a freelance web developer offering high-quality web development and SEO services. My expertise ensures that your business can achieve online success.  "> 
 <meta name="twitter:image" content="/images/meta-freelance-web-developer-lebanon.png">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
