--- a/index.html
+++ b/index.html
@@ -211,12 +211,7 @@ body::-webkit-scrollbar {
         <!-- End Google Tag Manager (noscript) -->
         
         <div id="invertedcursor"></div>
-     <!--   <div id="loading">
-            <div id="spinner"></div>
-        </div>-->
-     <!--   <div id="magnify">
-            <h1 onclick="closemagnify()"><i class="fas fa-times"></i></h1>
-            <div id="img_here"></div> -->
+   
         </div>
         <header id="header" style="background: #171717 !important;" class="animated slideInDown" style="animation-delay:1.8s;">
             <table>
@@ -236,7 +231,7 @@ body::-webkit-scrollbar {
             <tr>
                 <td id="about" class="animated slideInLeft" style="animation-delay:2s;">
        <h3 style="color:#dfd2c3;">Hi! I am Christelle, a Freelance Web Developer.</h3></br>
-            <h1 class="d-none">freelance web developer in lebanon</h1>
+            <h1 class="d-none">freelance web developer</h1>
                     <h2 class="big_header" ><span>I build websites that drive professionalism, growth, and <i>trust</i>.</span></h2>
                    <a href="#contact"> <button class="pulse-grow-on-hover" >Get in touch ➜</button></a><br>
                     
