--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
      
       <div id="bio">
       <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
-      <p>
+      <p style="text-align:left!important;">
          My name is Christelle, I am a <a href="https://christellehddd.com/" title="freelance web developer" rel="dofollow">freelance web developer</a> 
          offering high-quality Web development and SEO services. </br>My expertise ensures that your business can thrive and achieve online success.
          <br> 
