--- a/index.html
+++ b/index.html
@@ -210,13 +210,13 @@
       <h2 style="text-transform:uppercase;color:#dfd2c3;">about</h2>
       <p style="text-align:left!important;">
          My name is Christelle, I am a <a href="https://christellehddd.com/" title="freelance web developer" rel="dofollow">freelance web developer</a> 
-         offering high-quality Web development and SEO services. </br>My expertise ensures that your business can thrive and achieve online success.
-         <br> 
+         offering high-quality Web development and SEO services. My expertise ensures that your business can thrive and achieve online success.
+        
          With a strong passion for creating user-centered websites and helping people establish a digital presence, I am dedicated to delivering high-quality solutions tailored to their needs. 
          Whether you are a company, a start-up, or an individual, I am here to help you achieve your goals through effective <a href="https://christellehddd.com/" title="website design and development" rel="dofollow">web design and development</a>.
          With my skills and experience in website design and development, I create beautiful user-centered interfaces for brands and individuals who want to 
          make a strong web presence and achieve their goals. 
-         I am available for projects worldwide.
+         <br>I am available for projects worldwide.
       </p>
       <center>
          <br>
