--- a/index.html
+++ b/index.html
@@ -215,8 +215,7 @@
          With a strong passion for creating user-centered websites and helping people establish a digital presence, I am dedicated to delivering high-quality solutions tailored to their needs. 
          Whether you are a company, a start-up, or an individual, I am here to help you achieve your goals through effective <a href="https://christellehddd.com/" title="website design and development" rel="dofollow">web design and development</a>.
          With my skills and experience in website design and development, I create beautiful user-centered interfaces for brands and individuals who want to 
-         make a strong web presence and achieve their goals. 
-         <br>I am available for projects worldwide.
+         make a strong web presence and achieve their goals. I am available for projects worldwide.
       </p>
       <center>
          <br>
