--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                   </figure>-->
             <figure style="text-align:center;">
                <a href="https://junkyshopper.com/"> 
-               <img onclick="magnify($(this).attr('src'))"src="images/junkyshopper-website.png" alt="Junkyshopper Website for Odindigital"></a>
+               <img onclick="magnify($(this).attr('src'))"src="images/junkyf.png" alt="Junkyshopper Website for Odindigital"></a>
                <div  style="text-align:center;">
                   <a href="https://junkyshopper.com/">
                      <h3>JunkyShopper</h3>
